--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Form Validator</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="container">
       <form id="form" class="form">
-        <h2>Register With Us</h2>
+        <h1>Register With Us</h1>
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
@@ -23,11 +23,11 @@
           <input type="password" id="password" placeholder="Enter password" />
         </div>
         <div class="form-control">
-          <label for="password2">Password</label>
+          <label for="password2">Confirm password</label>
           <input
             type="password"
             id="password2"
-            placeholder="Confirm password"
+            placeholder="Re-enter password"
           />
         </div>
         <button type="submit">Submit</button>
